--- a/2Dshooter/final.html
+++ b/2Dshooter/final.html
@@ -63,7 +63,7 @@
         });
 
         const backgroundImage = new Image();
-        backgroundImage.src = 'path/to/your/background-image.jpg'; // Replace with your background image path
+        backgroundImage.src = 'https://github.com/ntriolo/ntriolo.github.io/blob/main/2Dshooter/caveman%20background.jpeg'; // Replace with your background image path
 
         const player = new fabric.Rect({
             left: 50,
