--- a/2Dshooter/final.html
+++ b/2Dshooter/final.html
@@ -3,196 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Shooter Game with Fabric.js</title>
+    <title>2D Shooter Game</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/4.5.0/fabric.min.js"></script>
     <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-            width: 100%;
-            height: 100%;
-        }
         canvas {
-            display: block;
-            background: #000;
-        }
-        #controls {
-            position: absolute;
-            top: 10px;
-            left: 50%;
-            transform: translateX(-50%);
-            z-index: 10;
-        }
-        #lives, #score {
-            position: absolute;
-            top: 10px;
-            color: white;
-            font-size: 20px;
-            z-index: 10;
-        }
-        #lives {
-            right: 10px;
-        }
-        #score {
-            left: 10px;
-        }
-        button {
-            padding: 10px 20px;
-            margin: 5px;
-            font-size: 16px;
+            border: 1px solid black;
         }
     </style>
 </head>
 <body>
-    <div id="controls">
-        <button id="startButton">Start</button>
-        <button id="stopButton">Stop</button>
-    </div>
-    <div id="lives">Lives: 10</div>
-    <div id="score">Score: 0</div>
-    <canvas id="gameCanvas"></canvas>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/4.6.0/fabric.min.js"></script>
+    <canvas id="gameCanvas" width="800" height="600"></canvas>
     <script>
+        // Initialize the canvas
         const canvas = new fabric.Canvas('gameCanvas');
-        canvas.setWidth(window.innerWidth);
-        canvas.setHeight(window.innerHeight);
 
-        window.addEventListener('resize', () => {
-            canvas.setWidth(window.innerWidth);
-            canvas.setHeight(window.innerHeight);
-        });
-
-        const backgroundImage = new Image();
-        backgroundImage.src = 'https://github.com/ntriolo/ntriolo.github.io/blob/main/2Dshooter/caveman%20background.jpeg'; // Replace with your background image path
-
-        const player = new fabric.Rect({
+        // Create the shooter character
+        const shooter = new fabric.Rect({
             left: 50,
             top: canvas.height / 2 - 25,
-            width: 50,
-            height: 50,
             fill: 'blue',
-            selectable: false
+            width: 50,
+            height: 50
         });
 
-        const bullets = [];
-        const bulletSpeed = 7;
+        // Add the shooter to the canvas
+        canvas.add(shooter);
 
-        const enemies = [];
-        const enemySpeed = 2;
-
-        let gameRunning = false;
-        let lives = 10;
-        let score = 0;
-
-        canvas.add(player);
-
-        function shoot() {
-            const bullet = new fabric.Rect({
-                left: player.left + player.width,
-                top: player.top + player.height / 2 - 5,
-                width: 20,
-                height: 10,
-                fill: 'red',
-                selectable: false
-            });
-            bullets.push(bullet);
-            canvas.add(bullet);
-        }
-
-        function keyDownHandler(event) {
-            if (event.key === 'ArrowUp') {
-                player.set('top', player.top - player.height);
-            } else if (event.key === 'ArrowDown') {
-                player.set('top', player.top + player.height);
-            } else if (event.key === ' ' && gameRunning) {
-                shoot();
-            }
-            canvas.renderAll();
-        }
-
-        document.addEventListener('keydown', keyDownHandler);
-
-        function createEnemy() {
-            const enemy = new fabric.Rect({
-                left: canvas.width,
-                top: Math.random() * (canvas.height - 50),
-                width: 50,
-                height: 50,
-                fill: 'green',
-                selectable: false
-            });
-            enemies.push(enemy);
-            canvas.add(enemy);
-        }
-
-        function update() {
-            if (gameRunning) {
-                bullets.forEach((bullet, index) => {
-                    bullet.set('left', bullet.left + bulletSpeed);
-                    if (bullet.left > canvas.width) {
-                        canvas.remove(bullet);
-                        bullets.splice(index, 1);
-                    }
-                });
-
-                enemies.forEach((enemy, index) => {
-                    enemy.set('left', enemy.left - enemySpeed);
-                    if (enemy.left + enemy.width < 0) {
-                        canvas.remove(enemy);
-                        enemies.splice(index, 1);
-                        lives--;
-                        document.getElementById('lives').innerText = `Lives: ${lives}`;
-                        if (lives <= 0) {
-                            gameRunning = false;
-                            alert('Game Over');
-                        }
-                    }
-                });
-
-                bullets.forEach((bullet, bulletIndex) => {
-                    enemies.forEach((enemy, enemyIndex) => {
-                        if (bullet.intersectsWithObject(enemy)) {
-                            canvas.remove(bullet);
-                            canvas.remove(enemy);
-                            bullets.splice(bulletIndex, 1);
-                            enemies.splice(enemyIndex, 1);
-                            score++;
-                            document.getElementById('score').innerText = `Score: ${score}`;
-                        }
-                    });
-                });
-
+        // Function to move the shooter up
+        function moveUp() {
+            if (shooter.top > 0) {
+                shooter.top -= 10;
                 canvas.renderAll();
-                requestAnimationFrame(update);
             }
         }
 
-        document.getElementById('startButton').addEventListener('click', function() {
-            if (!gameRunning) {
-                gameRunning = true;
-                lives = 10;
-                score = 0;
-                document.getElementById('lives').innerText = `Lives: ${lives}`;
-                document.getElementById('score').innerText = `Score: ${score}`;
-                setInterval(createEnemy, 1000);
-                update();
+        // Function to move the shooter down
+        function moveDown() {
+            if (shooter.top < canvas.height - shooter.height) {
+                shooter.top += 10;
+                canvas.renderAll();
+            }
+        }
+
+        // Event listener for key presses
+        document.addEventListener('keydown', function(event) {
+            if (event.key === 'ArrowUp') {
+                moveUp();
+            } else if (event.key === 'ArrowDown') {
+                moveDown();
             }
         });
-
-        document.getElementById('stopButton').addEventListener('click', function() {
-            gameRunning = false;
-        });
-
-        backgroundImage.onload = function() {
-            const fabricBackgroundImage = new fabric.Image(backgroundImage, {
-                left: 0,
-                top: 0,
-                scaleX: canvas.width / backgroundImage.width,
-                scaleY: canvas.height / backgroundImage.height,
-                selectable: false
-            });
-            canvas.setBackgroundImage(fabricBackgroundImage, canvas.renderAll.bind(canvas));
-        };
     </script>
 </body>
 </html>
