--- a/fabricjs2Dshooter/base.html
+++ b/fabricjs2Dshooter/base.html
@@ -29,6 +29,10 @@
         // Add the shooter to the canvas
         canvas.add(shooter);
 
+        // Array to keep track of bullets and enemies
+        const bullets = [];
+        const enemies = [];
+
         // Function to move the shooter up
         function moveUp() {
             if (shooter.top > 0) {
@@ -56,6 +60,7 @@
             });
 
             canvas.add(bullet);
+            bullets.push(bullet);
 
             // Animate the bullet
             function moveBullet() {
@@ -65,6 +70,7 @@
                     requestAnimationFrame(moveBullet);
                 } else {
                     canvas.remove(bullet);
+                    bullets.splice(bullets.indexOf(bullet), 1);
                 }
             }
 
@@ -82,6 +88,7 @@
             });
 
             canvas.add(enemy);
+            enemies.push(enemy);
 
             // Animate the enemy
             function moveEnemy() {
@@ -91,6 +98,7 @@
                     requestAnimationFrame(moveEnemy);
                 } else {
                     canvas.remove(enemy);
+                    enemies.splice(enemies.indexOf(enemy), 1);
                 }
             }
 
@@ -99,6 +107,23 @@
 
         // Generate enemies at random intervals
         setInterval(createEnemy, 2000);
+
+        // Function to check for collisions
+        function checkCollisions() {
+            bullets.forEach(bullet => {
+                enemies.forEach(enemy => {
+                    if (bullet.intersectsWithObject(enemy)) {
+                        canvas.remove(bullet);
+                        canvas.remove(enemy);
+                        bullets.splice(bullets.indexOf(bullet), 1);
+                        enemies.splice(enemies.indexOf(enemy), 1);
+                    }
+                });
+            });
+        }
+
+        // Check for collisions at regular intervals
+        setInterval(checkCollisions, 100);
 
         // Event listener for key presses
         document.addEventListener('keydown', function(event) {
