--- a/fabricjs2Dshooter/base.html
+++ b/fabricjs2Dshooter/base.html
@@ -122,7 +122,7 @@
                         canvas.remove(enemy);
                         bullets.splice(i, 1);
                         enemies.splice(j, 1);
-                        break;
+                        break; // Exit the inner loop to avoid errors
                     }
                 }
             }
